--- a/src/app/ui/global.css
+++ b/src/app/ui/global.css
@@ -4,6 +4,12 @@
 
 @import './tokens.css';
 
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 .line {
   fill: none;
   /* stroke: black; */
